# three_kingdom_history

./: .gitignore  LICENSE  LICENSE-DATA  README.md  pyproject.toml
.github/workflows/: pages.yml
annotations/houhanshu/: 08.yaml  09.yaml  10.yaml  57.yaml  58.yaml  60.yaml  61.yaml  62.yaml  63.yaml  64.yaml  65.yaml  66.yaml  67.yaml  68.yaml  69.yaml  70.yaml  71.yaml  72.yaml  73.yaml  74.yaml  75.yaml  76.yaml  77.yaml  78.yaml  79.yaml  80.yaml
annotations/zztj/: 056.yaml  057.yaml  058.yaml  059.yaml  060.yaml  061.yaml  062.yaml  063.yaml  064.yaml  065.yaml  066.yaml  (+17 more)
doc/: format.md  mcp.md
site/: index.html
tests/: test_batch_fetch.py  test_batch_fetch_hhs.py  test_build_people.py  test_build_site_data.py  test_build_timeline.py  test_build_variants.py  test_check.py  test_dates_resolver.py  test_diff_sources.py  test_extract_annotations.py  test_extract_dates.py  test_extract_persons.py  test_fetch_ctext.py  test_fetch_wikisource.py  test_retry_variants_locally.py  test_segment.py
tools/: batch_fetch.py  batch_fetch_hhs.py  batch_fetch_zztj.py  build_people.py  build_site_data.py  build_timeline.py  build_variants.py  check.py  dates_resolver.py  diff_sources.py  extract_annotations.py  extract_annotations_hhs.py  extract_bio_subjects.py  extract_dates.py  extract_dates_hhs.py  extract_dates_zztj.py  extract_persons.py  fetch_ctext.py  fetch_wikisource.py  find_ambiguous_persons.py  houhanshu_chapters.yaml  merge_llm_persons.py  people.yaml  resolve_llm_nulls.py  retry_variants_locally.py  sanguozhi_chapters.yaml  segment.py  zztj_chapters.yaml
(+840 files in other folders)
