[project]
name = "three-kingdom-history"
version = "0.1.0"
description = "Structured Three Kingdoms history corpus (Sanguozhi text + variants + annotations)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
